--- a/index.html
+++ b/index.html
@@ -167,17 +167,24 @@
        <section class="page4">
         <div class="page4wrapper">
         <div class="cupboard">
-            <img src="images/cupboard.png" alt="cupboard">
             <div class="list-itemall">
-            <div class="list-item"><span class="color">01</span></div>
-            <p>Our specialist will arrive for measurements per day <br> contact, or appoint a date convenient for you</p>
-            <div class="list-item"><span class="color">02</span></div>
-            <p>Free metering</p>     
-            <div class="list-item"><span class="color">03</span></div>
-            <p>Free consultation</p>
-            <div class="list-item"><span class="color">04</span></div>
-            <p>Get a cost estimate and <br>
-                the timing of your future repairs</p>
+                <div class="list-itemwrap">
+                    <div class="list-item"><span class="color">01</span></div>
+                    <p>Our specialist will arrive for measurements per day <br> contact, or appoint a date convenient for you</p>
+                </div>
+                <div class="list-itemwrap">
+                    <div class="list-item"><span class="color">02</span></div>
+                    <p>Free metering</p> 
+                </div>
+                <div class="list-itemwrap">
+                    <div class="list-item"><span class="color">03</span></div>
+                    <p>Free consultation</p>
+                </div>
+                <div class="list-itemwrap">
+                    <div class="list-item"><span class="color">04</span></div>
+                    <p>Get a cost estimate and <br>
+                        the timing of your future repairs</p>
+                </div>
             </div>
         </div>
     <div class="rigthsection">
@@ -191,8 +198,9 @@
                       <div class="mark">
                          <img src="images/mark.png" alt="check mark">
                          <p>I agree to the processing of personal data</p>
-                         <div class="datanav"><button class="b-data">Call the measurer</button></div>
+                         <div class="datanav"></div>
                       </div>
+                      <button class="b-data">Call the measurer</button>
                 </div>
         </div>
         <div class="pig">
@@ -237,7 +245,7 @@
         <div class="textpage6"><p>80% of our customers recommend us to their <br>
             friends and family.</p></div>
             <div class="descript">
-                <div class="description2"><p class="designation2"><img src="images/maria.png" alt="maria"> Fedosova Maria <br> Konstantinovna</p>
+                <div class="description2"><p class="designation2"><img class="imgclient" src="images/maria.png" alt="maria"> Fedosova Maria <br> Konstantinovna</p>
                     <p class="textclients">I want to thank the guys for their work. We put your <br>
                     shower part in repair. I am very grateful that I referred <br>
                     to the repair as to my own. Great thanks I express the <br>
@@ -250,7 +258,7 @@
                     masters.</p> 
                     <button class="button332">from 1800 rub / m2</button>
                 </div>
-                <div class="description2"><p class="designation2"><img src="images/sergey.png" alt="sergey">Afanasyev Sergey <br> Alexandrovich</p>
+                <div class="description2"><p class="designation2"><img class="imgclient" src="images/sergey.png" alt="sergey">Afanasyev Sergey <br> Alexandrovich</p>
                     <p class="textclients">I want to thank the guys for their work. We put your <br>
                     shower part in repair. I am very grateful that I referred <br>
                     to the repair as to my own. Great thanks I express the <br>
@@ -263,7 +271,7 @@
                     masters.</p> 
                     <button class="button332">from 1800 rub / m2</button>
                 </div>
-                <div class="description2"><p class="designation2"><img src="images/egor.png" alt="egor">Kiriev Egor <br> Leonidovich</p>
+                <div class="description2"><p class="designation2"><img class="imgclient" src="images/egor.png" alt="egor">Kiriev Egor <br> Leonidovich</p>
                     <p class="textclients">I want to thank the guys for their work. We put your <br>
                     shower part in repair. I am very grateful that I referred <br>
                     to the repair as to my own. Great thanks I express the <br>
