--- a/index.html
+++ b/index.html
@@ -282,7 +282,14 @@
                     performed qualitatively without comments. Quality <br>
                     satisfied. Prices democratic. I recommend these <br>
                     masters.</p> 
-                    <button class="button332">from 4000 rub / m2</button>
+                    <button class="button332">
+                        <div class="buttoninput"><img src="/images/size.png" alt="sizepng">
+                            <p class="buttontext1">56 м2</p>
+                        </div>
+                            <div class="buttoninput2"> <img src="/images/date.png" alt="datepng">
+                                <p class="buttontext1">86 DAYS</p></div>
+                           
+                        </button>
                 </div>
             </div>
        </section>
