--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
             your apartment. You can watch the live broadcast from one of our facilities! <br>
             Leave a request below and you will receive a link to the broadcast.</p>
         <div class="data">
-            <div class="datanav"><label><span class="inputtext">Name</span> <br><input class="input"  name ="Name" type="text" placeholder="What is your name?"></label></div>
-            <div class="datanav"><label><span class="inputtext">Phone</span> <br><input class="input" name ="Phone" type="text" placeholder="Your phone number:"></label></div>
+            <div class="datanav"><label><span class="inputtext1">Name</span> <br><input class="input1"  name ="Name" type="text" placeholder="What is your name?"></label></div>
+            <div class="datanav"><label><span class="inputtext1">Phone</span> <br><input class="input1" name ="Phone" type="text" placeholder="Your phone number:"></label></div>
             <div class="datanav"><button class="b-data">Submit</button></div>
         </div>
         <div class="mark">
@@ -195,12 +195,13 @@
                    <div class="datanav"><label><span class="inputtext">Name</span> <br><input class="input"  name ="Name" type="text" placeholder="What is your name?"></label></div>
                    <div class="datanav"><label><span class="inputtext">Phone</span> <br><input class="input" name ="Phone" type="text" placeholder="Your phone number:"></label></div>
                    <div class="datanav"><label><span class="inputtext">Email</span> <br><input class="input" name ="Phone" type="text" placeholder="Your email"></label></div>
-                      <div class="mark">
-                         <img src="images/mark.png" alt="check mark">
-                         <p>I agree to the processing of personal data</p>
-                         <div class="datanav"></div>
-                      </div>
+                   <div class="mark">
+                    <img src="images/mark.png" alt="check mark">
+                    <p class="lustdata">I agree to the processing of personal <br> data</p>
+                 </div>
+                    <div>
                       <button class="b-data">Call the measurer</button>
+                    </div>
                 </div>
         </div>
         <div class="pig">
@@ -256,7 +257,17 @@
                     performed qualitatively without comments. Quality <br>
                     satisfied. Prices democratic. I recommend these <br>
                     masters.</p> 
-                    <button class="button332">from 1800 rub / m2</button>
+                    <button class="button332"> 
+                        <div class="buttoninput">
+                        <img src="images/size.png" alt="sizepng">
+                        <p class="buttontext1">40 m2</p>
+                        </div>
+                    <img src="images/Vector20.png" alt="Vector20">
+                        <div class="buttoninput2"> 
+                            <img src="images/date.png" alt="datepng">
+                            <p class="buttontext1">48 DAYS</p>
+                        </div>
+                        </button>
                 </div>
                 <div class="description2"><p class="designation2"><img class="imgclient" src="images/sergey.png" alt="sergey">Afanasyev Sergey <br> Alexandrovich</p>
                     <p class="textclients">I want to thank the guys for their work. We put your <br>
@@ -269,7 +280,14 @@
                     performed qualitatively without comments. Quality <br>
                     satisfied. Prices democratic. I recommend these <br>
                     masters.</p> 
-                    <button class="button332">from 1800 rub / m2</button>
+                    <button class="button332"> <div class="buttoninput">
+                        <img src="images/size.png" alt="sizepng">
+                        <p class="buttontext1">90 м2</p>
+                    </div>
+                    <img src="images/Vector20.png" alt="Vector20">
+                        <div class="buttoninput2"> 
+                            <img src="images/date.png" alt="datepng">
+                            <p class="buttontext1">128 DAYS</p></div></button>
                 </div>
                 <div class="description2"><p class="designation2"><img class="imgclient" src="images/egor.png" alt="egor">Kiriev Egor <br> Leonidovich</p>
                     <p class="textclients">I want to thank the guys for their work. We put your <br>
@@ -283,36 +301,44 @@
                     satisfied. Prices democratic. I recommend these <br>
                     masters.</p> 
                     <button class="button332">
-                        <div class="buttoninput"><img src="/images/size.png" alt="sizepng">
+                        <div class="buttoninput">
+                            <img src="images/size.png" alt="sizepng">
                             <p class="buttontext1">56 м2</p>
                         </div>
-                            <div class="buttoninput2"> <img src="/images/date.png" alt="datepng">
-                                <p class="buttontext1">86 DAYS</p></div>
-                           
+                        <img src="images/Vector20.png" alt="Vector20">
+                            <div class="buttoninput2"> 
+                                <img src="images/date.png" alt="datepng">
+                                <p class="buttontext1">86 DAYS</p>
+                            </div>
                         </button>
                 </div>
             </div>
        </section>
        <section class="page7">
+        <div class="wraper7">
+        <div class="page7wrap">
         <div class="data3">
-            <p class="blacktext">Leave a request for free <br>
-                departure of the measurer</p>
+            <p class="blacktext1">have any questions?</p>
                 <div class="data2">
-                   <div class="datanav"><label><span class="inputtext">Name</span> <br><input class="input"  name ="Name" type="text" placeholder="What is your name?"></label></div>
-                   <div class="datanav"><label><span class="inputtext">Phone</span> <br><input class="input" name ="Phone" type="text" placeholder="Your phone number:"></label></div>
-                   <div class="datanav"><label><span class="inputtext">Email</span> <br><input class="input" name ="Phone" type="text" placeholder="Your email"></label></div>
-                      <div class="mark">
+                    <div class="datanavall">
+                        <div class="datanav"><label><span class="inputtext">Name</span> <br><input class="input"  name ="Name" type="text" placeholder="What is your name?"></label></div>
+                        <div class="datanav"><label><span class="inputtext">Phone</span> <br><input class="input" name ="Phone" type="text" placeholder="Your phone number:"></label></div>
+                        <div class="datanav54"><label><span class="inputtext">Email</span> <br><input class="input" name ="Phone" type="text" placeholder="Your email"></label></div>
+                    </div> 
+                   <div class="mark">
                          <img src="images/mark.png" alt="check mark">
-                         <p>I agree to the processing of personal data</p>
-                         <div class="datanav"><button class="b-data">Call the measurer</button></div>
+                         <p class="lustdata">I agree to the processing of personal <br> data</p>
                       </div>
+                    <div><button class="b-data">Call the measurer</button></div>
                 </div>
+        </div>
         </div>
         <div class="lusttitle"><p>Rostov-on-Don, Nansen St., 239 Shopping Center <br>
             Decorum Tel +7 (928) 768 32 29</p></div>
             <div class="dataitem"><img src="images/massageitem.png" alt="massageitem">
             <img src="images/inst.png" alt="institem"></div>
             <div class="map"><img src="images/map.png" alt="map"></div>
+        </div>
        </section>
     </main>
     <footer class="footer">
